--- a/samples/makefile.gcc
+++ b/samples/makefile.gcc
@@ -52,6 +52,9 @@ endif
 ifeq ($(USE_MEDIA),1)
 __mediaplayer___depname = mediaplayer
 endif
+ifeq ($(USE_PROPGRID),1)
+__propgrid___depname = propgrid
+endif
 ifeq ($(USE_HTML),1)
 __richtext___depname = richtext
 endif
@@ -65,7 +68,7 @@ endif
 
 ### Targets: ###
 
-all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing propgrid regtest render ribbon $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
+all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render ribbon $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.o del .\*.o
@@ -311,8 +314,10 @@ preferences:
 printing: 
 	$(MAKE) -C printing -f makefile.gcc $(MAKEARGS) all
 
+ifeq ($(USE_PROPGRID),1)
 propgrid: 
 	$(MAKE) -C propgrid -f makefile.gcc $(MAKEARGS) all
+endif
 
 regtest: 
 	$(MAKE) -C regtest -f makefile.gcc $(MAKEARGS) all
