Fix ribbon samples being compiled when USE_RIBBON=0

--- a/samples/makefile.bcc
+++ b/samples/makefile.bcc
@@ -62,20 +62,23 @@ __mediaplayer___depname = mediaplayer
 !if "$(USE_PROPGRID)" == "1"
 __propgrid___depname = propgrid
 !endif
+!if "$(USE_RIBBON)" == "1"
+__ribbon___depname = ribbon
+!endif
 !if "$(USE_HTML)" == "1"
 __richtext___depname = richtext
 !endif
 !if "$(USE_MEDIA)" == "1"
 __splash___depname = splash
 !endif
-!if "$(USE_HTML)" == "1"
+!if "$(USE_HTML)" == "1" && "$(USE_RIBBON)" == "1"
 __xrc___depname = xrc
 !endif
 
 
 ### Targets: ###
 
-all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render ribbon $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
+all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render $(__ribbon___depname) $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.obj del .\*.obj
@@ -732,11 +735,13 @@ render:
 	call render.bat
 	@del render.bat
 
+!if "$(USE_RIBBON)" == "1"
 ribbon: 
 	@echo cd ribbon >ribbon.bat
 	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) all >>ribbon.bat
 	call ribbon.bat
 	@del ribbon.bat
+!endif
 
 !if "$(USE_HTML)" == "1"
 richtext: 
@@ -898,7 +903,7 @@ wrapsizer:
 	call wrapsizer.bat
 	@del wrapsizer.bat
 
-!if "$(USE_HTML)" == "1"
+!if "$(USE_HTML)" == "1" && "$(USE_RIBBON)" == "1"
 xrc: 
 	@echo cd xrc >xrc.bat
 	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) all >>xrc.bat
