--- a/samples/makefile.gcc
+++ b/samples/makefile.gcc
@@ -55,6 +55,9 @@ endif
 ifeq ($(USE_PROPGRID),1)
 __propgrid___depname = propgrid
 endif
+ifeq ($(USE_RIBBON),1)
+__ribbon___depname = ribbon
+endif
 ifeq ($(USE_HTML),1)
 __richtext___depname = richtext
 endif
@@ -62,13 +65,15 @@ ifeq ($(USE_MEDIA),1)
 __splash___depname = splash
 endif
 ifeq ($(USE_HTML),1)
+ifeq ($(USE_RIBBON),1)
 __xrc___depname = xrc
+endif
 endif
 
 
 ### Targets: ###
 
-all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render ribbon $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
+all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render $(__ribbon___depname) $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.o del .\*.o
@@ -325,8 +330,10 @@ regtest:
 render: 
 	$(MAKE) -C render -f makefile.gcc $(MAKEARGS) all
 
+ifeq ($(USE_RIBBON),1)
 ribbon: 
 	$(MAKE) -C ribbon -f makefile.gcc $(MAKEARGS) all
+endif
 
 ifeq ($(USE_HTML),1)
 richtext: 
@@ -411,8 +418,10 @@ wrapsizer:
 	$(MAKE) -C wrapsizer -f makefile.gcc $(MAKEARGS) all
 
 ifeq ($(USE_HTML),1)
+ifeq ($(USE_RIBBON),1)
 xrc: 
 	$(MAKE) -C xrc -f makefile.gcc $(MAKEARGS) all
+endif
 endif
 
 memcheck: 
