--- a/samples/makefile.vc
+++ b/samples/makefile.vc
@@ -53,20 +53,23 @@ __mediaplayer___depname = sub_mediaplayer
 !if "$(USE_PROPGRID)" == "1"
 __propgrid___depname = sub_propgrid
 !endif
+!if "$(USE_RIBBON)" == "1"
+__ribbon___depname = sub_ribbon
+!endif
 !if "$(USE_HTML)" == "1"
 __richtext___depname = sub_richtext
 !endif
 !if "$(USE_MEDIA)" == "1"
 __splash___depname = sub_splash
 !endif
-!if "$(USE_HTML)" == "1"
+!if "$(USE_HTML)" == "1" && "$(USE_RIBBON)" == "1"
 __xrc___depname = sub_xrc
 !endif
 
 
 ### Targets: ###
 
-all: sub_access sub_animate sub_artprov $(__aui___depname) sub_calendar sub_caret sub_clipboard sub_collpane sub_combo sub_config sub_console sub_dataview sub_dialogs sub_dialup sub_display sub_dll sub_dnd sub_docview sub_dragimag sub_drawing sub_erase sub_event $(__except___depname) sub_exec sub_font sub_grid $(__help___depname) $(__htlbox___depname) $(__html___depname) sub_image sub_internat sub_ipc sub_joytest sub_keyboard sub_layout sub_listctrl sub_mdi $(__mediaplayer___depname) sub_menu sub_minimal sub_nativdlg sub_notebook sub_oleauto sub_opengl sub_ownerdrw sub_popup sub_power sub_preferences sub_printing $(__propgrid___depname) sub_regtest sub_render sub_ribbon $(__richtext___depname) sub_sashtest sub_scroll sub_secretstore sub_shaped sub_sockets sub_sound $(__splash___depname) sub_splitter sub_statbar sub_stc sub_svg sub_taborder sub_taskbar sub_text sub_thread sub_toolbar sub_treectrl sub_typetest sub_uiaction sub_validate sub_vscroll sub_webview sub_widgets sub_wizard sub_wrapsizer $(__xrc___depname)
+all: sub_access sub_animate sub_artprov $(__aui___depname) sub_calendar sub_caret sub_clipboard sub_collpane sub_combo sub_config sub_console sub_dataview sub_dialogs sub_dialup sub_display sub_dll sub_dnd sub_docview sub_dragimag sub_drawing sub_erase sub_event $(__except___depname) sub_exec sub_font sub_grid $(__help___depname) $(__htlbox___depname) $(__html___depname) sub_image sub_internat sub_ipc sub_joytest sub_keyboard sub_layout sub_listctrl sub_mdi $(__mediaplayer___depname) sub_menu sub_minimal sub_nativdlg sub_notebook sub_oleauto sub_opengl sub_ownerdrw sub_popup sub_power sub_preferences sub_printing $(__propgrid___depname) sub_regtest sub_render $(__ribbon___depname) $(__richtext___depname) sub_sashtest sub_scroll sub_secretstore sub_shaped sub_sockets sub_sound $(__splash___depname) sub_splitter sub_statbar sub_stc sub_svg sub_taborder sub_taskbar sub_text sub_thread sub_toolbar sub_treectrl sub_typetest sub_uiaction sub_validate sub_vscroll sub_webview sub_widgets sub_wizard sub_wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.obj del .\*.obj
@@ -596,10 +599,12 @@ sub_render:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_RIBBON)" == "1"
 sub_ribbon: 
 	cd ribbon
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 !if "$(USE_HTML)" == "1"
 sub_richtext: 
@@ -735,7 +740,7 @@ sub_wrapsizer:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
-!if "$(USE_HTML)" == "1"
+!if "$(USE_HTML)" == "1" && "$(USE_RIBBON)" == "1"
 sub_xrc: 
 	cd xrc
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
