--- a/samples/makefile.gcc
+++ b/samples/makefile.gcc
@@ -66,6 +66,12 @@ endif
 ifeq ($(USE_MEDIA),1)
 __splash___depname = splash
 endif
+ifeq ($(USE_STC),1)
+__stc___depname = stc
+endif
+ifeq ($(USE_STC),1)
+__webview___depname = webview
+endif
 ifeq ($(USE_HTML),1)
 ifeq ($(USE_RIBBON),1)
 __xrc___depname = xrc
@@ -75,7 +81,7 @@ endif
 
 ### Targets: ###
 
-all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render $(__ribbon___depname) $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
+all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi $(__mediaplayer___depname) menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing $(__propgrid___depname) regtest render $(__ribbon___depname) $(__richtext___depname) sashtest scroll secretstore shaped sockets sound $(__splash___depname) splitter statbar $(__stc___depname) svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll $(__webview___depname) widgets wizard wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.o del .\*.o
@@ -373,8 +379,10 @@ splitter:
 statbar: 
 	$(MAKE) -C statbar -f makefile.gcc $(MAKEARGS) all
 
+ifeq ($(USE_STC),1)
 stc: 
 	$(MAKE) -C stc -f makefile.gcc $(MAKEARGS) all
+endif
 
 svg: 
 	$(MAKE) -C svg -f makefile.gcc $(MAKEARGS) all
@@ -409,8 +417,10 @@ validate:
 vscroll: 
 	$(MAKE) -C vscroll -f makefile.gcc $(MAKEARGS) all
 
+ifeq ($(USE_STC),1)
 webview: 
 	$(MAKE) -C webview -f makefile.gcc $(MAKEARGS) all
+endif
 
 widgets: 
 	$(MAKE) -C widgets -f makefile.gcc $(MAKEARGS) all
