--- a/samples/makefile.vc
+++ b/samples/makefile.vc
@@ -62,6 +62,12 @@ __richtext___depname = sub_richtext
 !if "$(USE_MEDIA)" == "1"
 __splash___depname = sub_splash
 !endif
+!if "$(USE_STC)" == "1"
+__stc___depname = sub_stc
+!endif
+!if "$(USE_STC)" == "1"
+__webview___depname = sub_webview
+!endif
 !if "$(USE_HTML)" == "1" && "$(USE_RIBBON)" == "1"
 __xrc___depname = sub_xrc
 !endif
@@ -69,7 +75,7 @@ __xrc___depname = sub_xrc
 
 ### Targets: ###
 
-all: sub_access sub_animate sub_artprov $(__aui___depname) sub_calendar sub_caret sub_clipboard sub_collpane sub_combo sub_config sub_console sub_dataview sub_dialogs sub_dialup sub_display sub_dll sub_dnd sub_docview sub_dragimag sub_drawing sub_erase sub_event $(__except___depname) sub_exec sub_font sub_grid $(__help___depname) $(__htlbox___depname) $(__html___depname) sub_image sub_internat sub_ipc sub_joytest sub_keyboard sub_layout sub_listctrl sub_mdi $(__mediaplayer___depname) sub_menu sub_minimal sub_nativdlg sub_notebook sub_oleauto sub_opengl sub_ownerdrw sub_popup sub_power sub_preferences sub_printing $(__propgrid___depname) sub_regtest sub_render $(__ribbon___depname) $(__richtext___depname) sub_sashtest sub_scroll sub_secretstore sub_shaped sub_sockets sub_sound $(__splash___depname) sub_splitter sub_statbar sub_stc sub_svg sub_taborder sub_taskbar sub_text sub_thread sub_toolbar sub_treectrl sub_typetest sub_uiaction sub_validate sub_vscroll sub_webview sub_widgets sub_wizard sub_wrapsizer $(__xrc___depname)
+all: sub_access sub_animate sub_artprov $(__aui___depname) sub_calendar sub_caret sub_clipboard sub_collpane sub_combo sub_config sub_console sub_dataview sub_dialogs sub_dialup sub_display sub_dll sub_dnd sub_docview sub_dragimag sub_drawing sub_erase sub_event $(__except___depname) sub_exec sub_font sub_grid $(__help___depname) $(__htlbox___depname) $(__html___depname) sub_image sub_internat sub_ipc sub_joytest sub_keyboard sub_layout sub_listctrl sub_mdi $(__mediaplayer___depname) sub_menu sub_minimal sub_nativdlg sub_notebook sub_oleauto sub_opengl sub_ownerdrw sub_popup sub_power sub_preferences sub_printing $(__propgrid___depname) sub_regtest sub_render $(__ribbon___depname) $(__richtext___depname) sub_sashtest sub_scroll sub_secretstore sub_shaped sub_sockets sub_sound $(__splash___depname) sub_splitter sub_statbar $(__stc___depname) sub_svg sub_taborder sub_taskbar sub_text sub_thread sub_toolbar sub_treectrl sub_typetest sub_uiaction sub_validate sub_vscroll $(__webview___depname) sub_widgets sub_wizard sub_wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.obj del .\*.obj
@@ -660,10 +666,12 @@ sub_statbar:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_STC)" == "1"
 sub_stc: 
 	cd stc
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 sub_svg: 
 	cd svg
@@ -720,10 +728,12 @@ sub_vscroll:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_STC)" == "1"
 sub_webview: 
 	cd webview
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 sub_widgets: 
 	cd widgets
