Add missing comments
In 6d553035ddb3df2160377e2e8847124f20abf233 some comments were added to stc.h but not to stc.h.in so at next run of gen_iface.py those changes would be undone. We need to synchronize stc.h.in with stc.h.

See #17688.

--- a/src/stc/stc.h.in
+++ b/src/stc/stc.h.in
@@ -705,7 +705,7 @@ wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_MARGIN_RIGHT_CLICK, wxStyle
         wxEVT_STC_SAVEPOINTREACHED,
         wxEVT_STC_SAVEPOINTLEFT,
         wxEVT_STC_ROMODIFYATTEMPT,
-        wxEVT_STC_KEY,
+        wxEVT_STC_KEY, // deprecated
         wxEVT_STC_DOUBLECLICK,
         wxEVT_STC_UPDATEUI,
         wxEVT_STC_MODIFIED,
@@ -714,7 +714,7 @@ wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_MARGIN_RIGHT_CLICK, wxStyle
         wxEVT_STC_NEEDSHOWN,
         wxEVT_STC_PAINTED,
         wxEVT_STC_USERLISTSELECTION,
-        wxEVT_STC_URIDROPPED,
+        wxEVT_STC_URIDROPPED, // deprecated
         wxEVT_STC_DWELLSTART,
         wxEVT_STC_DWELLEND,
         wxEVT_STC_START_DRAG,
