--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -115,6 +115,7 @@ TEST_OBJECTS =  \
 	test_vararg.o \
 	test_crt.o \
 	test_vsnprintf.o \
+	test_hexconv.o \
 	test_bstream.o \
 	test_datastreamtest.o \
 	test_ffilestream.o \
@@ -680,6 +681,9 @@ test_crt.o: $(srcdir)/strings/crt.cpp $(TEST_ODEP)
 
 test_vsnprintf.o: $(srcdir)/strings/vsnprintf.cpp $(TEST_ODEP)
 	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/strings/vsnprintf.cpp
+
+test_hexconv.o: $(srcdir)/strings/hexconv.cpp $(TEST_ODEP)
+	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/strings/hexconv.cpp
 
 test_bstream.o: $(srcdir)/streams/bstream.cpp $(TEST_ODEP)
 	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/streams/bstream.cpp
