--- a/tests/makefile.vc
+++ b/tests/makefile.vc
@@ -89,6 +89,7 @@ TEST_OBJECTS =  \
 	$(OBJS)\test_vararg.obj \
 	$(OBJS)\test_crt.obj \
 	$(OBJS)\test_vsnprintf.obj \
+	$(OBJS)\test_hexconv.obj \
 	$(OBJS)\test_bstream.obj \
 	$(OBJS)\test_datastreamtest.obj \
 	$(OBJS)\test_ffilestream.obj \
@@ -887,6 +888,9 @@ $(OBJS)\test_crt.obj: .\strings\crt.cpp
 
 $(OBJS)\test_vsnprintf.obj: .\strings\vsnprintf.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_CXXFLAGS) .\strings\vsnprintf.cpp
+
+$(OBJS)\test_hexconv.obj: .\strings\hexconv.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(TEST_CXXFLAGS) .\strings\hexconv.cpp
 
 $(OBJS)\test_bstream.obj: .\streams\bstream.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_CXXFLAGS) .\streams\bstream.cpp
