--- a/src/stc/stc.interface.h.in
+++ b/src/stc/stc.interface.h.in
@@ -1513,14 +1513,14 @@ public:
         The returned value is a bit list that may contain one or more of the
         following values:
 
-        - @link wxStyledTextEvent::wxSTC_SCMOD_SHIFT wxSTC_SCMOD_SHIFT @endlink
-        - @link wxStyledTextEvent::wxSTC_SCMOD_CTRL wxSTC_SCMOD_CTRL @endlink
-        - @link wxStyledTextEvent::wxSTC_SCMOD_ALT wxSTC_SCMOD_ALT @endlink
-        - @link wxStyledTextEvent::wxSTC_SCMOD_SUPER wxSTC_SCMOD_SUPER @endlink
-        - @link wxStyledTextEvent::wxSTC_SCMOD_META wxSTC_SCMOD_META @endlink
+        - @link wxStyledTextEvent::wxSTC_KEYMOD_SHIFT wxSTC_KEYMOD_SHIFT @endlink
+        - @link wxStyledTextEvent::wxSTC_KEYMOD_CTRL wxSTC_KEYMOD_CTRL @endlink
+        - @link wxStyledTextEvent::wxSTC_KEYMOD_ALT wxSTC_KEYMOD_ALT @endlink
+        - @link wxStyledTextEvent::wxSTC_KEYMOD_SUPER wxSTC_KEYMOD_SUPER @endlink
+        - @link wxStyledTextEvent::wxSTC_KEYMOD_META wxSTC_KEYMOD_META @endlink
 
         In addition, the value can be checked for equality with @link
-        wxStyledTextEvent::wxSTC_SCMOD_NORM wxSTC_SCMOD_NORM @endlink to test
+        wxStyledTextEvent::wxSTC_KEYMOD_NORM wxSTC_KEYMOD_NORM @endlink to test
         if no modifiers are present.
 
         This method is valid for the following event types:
