Improve generating wxSTC code and documentation
Several new features were implemented in gen_iface.py and accompanying '.in' files:
1. Added an option to parse provisional section in Scintilla.iface. When global variable GENERATE_PROVISIONAL_ITEMS is set to 1, methods and values in this section receive corresponding wxSTC items.
2. Deprecated section in Scintilla.iface is not skipped, but parsed and corresponding wxSTC items are created (marked as deprecated in the code and documentation).
3. Added a set 'notMappedSciValues' that can be used to prevent the creation of specific wxSTC values which are intended to be handled manually.
4. For deprecated constants there is generated a code to raise respective warnings during the compilation.

Closes #17671.

--- a/src/stc/stc.cpp.in
+++ b/src/stc/stc.cpp.in
@@ -670,6 +670,14 @@ void wxStyledTextCtrl::UsePopUp(bool allowPopUp)
     SendMsg(SCI_USEPOPUP, allowPopUp ? SC_POPUP_ALL : SC_POPUP_NEVER, 0);
 }
 
+void wxStyledTextCtrl::StartStyling(int start, int unused)
+{
+        wxASSERT_MSG(unused==0,
+                     "The second argument passed to StartStyling should be 0");
+
+        SendMsg(SCI_STARTSTYLING, start, unused);
+}
+
 //----------------------------------------------------------------------
 // Event handlers
 
