Use wxSwap() function to swap values of variables

--- a/src/stc/stc.cpp.in
+++ b/src/stc/stc.cpp.in
@@ -624,9 +624,7 @@ wxCharBuffer wxStyledTextCtrl::GetTargetTextRaw()
 wxCharBuffer wxStyledTextCtrl::GetTextRangeRaw(int startPos, int endPos)
 {
     if (endPos < startPos) {
-        int temp = startPos;
-        startPos = endPos;
-        endPos = temp;
+        wxSwap(startPos, endPos);
     }
     int len  = endPos - startPos;
     if (!len) {
