--- a/src/stc/stc.cpp.in
+++ b/src/stc/stc.cpp.in
@@ -763,7 +763,8 @@ void wxStyledTextCtrl::OnContextMenu(wxContextMenuEvent& evt) {
     if (ht != wxHT_WINDOW_INSIDE) {
         pt = this->PointFromPosition(this->GetCurrentPos());
     }
-    m_swx->DoContextMenu(Point(pt.x, pt.y));
+    if ( !m_swx->DoContextMenu(Point(pt.x, pt.y)) )
+        evt.Skip();
 }
 
 
