Compile the check for ICONV_CONST as C++
On OpenIndiana (SunOS) the result is different when compiled as C,
and the C++ result is what matters to wxWidgets.

Fixes compilation of src/common/strconv.cpp on OpenIndiana.

--- a/configure.in
+++ b/configure.in
@@ -4117,7 +4117,9 @@ if test "$TOOLKIT" != "MSW"; then
 
 dnl check for available version of iconv()
 if test "$wxUSE_LIBICONV" != "no" ; then
+    AC_LANG_PUSH(C++)
     AM_ICONV
+    AC_LANG_POP()
     LIBS="$LIBICONV $LIBS"
 fi
 
