Add autoconf support for building with SDL2
Adds support for finding SDL2 when running configure (support for actually
using SDL2 was added back in 393e80da5bcf5528f78efdd93f2bc817d73599e1).

--- a/configure.in
+++ b/configure.in
@@ -5423,14 +5423,26 @@ WITH_PLUGIN_SDL=0
 if test "$wxUSE_SOUND" = "yes"; then
   if test "$USE_UNIX" = 1 ; then
     if test "$wxUSE_LIBSDL" != "no"; then
-      AM_PATH_SDL([1.2.0],
+      PKG_PROG_PKG_CONFIG()
+
+      PKG_CHECK_MODULES([SDL], [sdl2 >= 2.0.0],
                   [
                     EXTRALIBS_SDL="$SDL_LIBS"
                     CFLAGS="$SDL_CFLAGS $CFLAGS"
                     CXXFLAGS="$SDL_CFLAGS $CXXFLAGS"
                     AC_DEFINE(wxUSE_LIBSDL)
                   ],
-                  [wxUSE_LIBSDL="no"])
+                  [
+                    AC_MSG_NOTICE([SDL 2.0 not available. Falling back to 1.2.])
+                    AM_PATH_SDL([1.2.0],
+                                [
+                                  EXTRALIBS_SDL="$SDL_LIBS"
+                                  CFLAGS="$SDL_CFLAGS $CFLAGS"
+                                  CXXFLAGS="$SDL_CFLAGS $CXXFLAGS"
+                                  AC_DEFINE(wxUSE_LIBSDL)
+                                ],
+                                [wxUSE_LIBSDL="no"])
+		  ])
       if test "$wxUSE_LIBSDL" = "yes" -a "$wxUSE_PLUGINS" = "yes" ; then
         WITH_PLUGIN_SDL=1
       fi
